Replaced deprecated constructors with actual constructors.